# Master-rad

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Predlozi.txt  README.txt  command_object.py  common_api.py  defines.py  linux_amd_impl.c  linux_amd_impl.py  linux_rocm.sh  linux_rocm.sh.bak  linux_rocm_smi_api.py  linux_rocm_smi_bindings.py  linux_rocm_smi_wrapper.py  linux_warning.txt  main.py  output_templates.py  process_request.py  requests.py  rocm_smi.py  rsmiBindings.py  setup.py  universal_output_structures.py  utils.py  windows_amd_api.py  windows_amd_bindings.py  windows_amd_impl.c  windows_amd_impl.cpp  windows_amd_impl.h  windows_amd_wrapper.py  windows_linux_nvidia_impl.py
adl/: .gitignore  MSSCCPRJ.SCC  Makefile  adl.kdevelop  adl.kdevelop.pcs  adl.kdevses  adl.pro  sdcontrol
adl/include/: adapter.h  adl.h  adl_defines.h  adl_structures.h  appprofiles.h  controller.h  crossdisplay.h  display.h  displaysmanager.h  graphics.h  lnx.h  overdrive5.h  overdrive6.h  overdrive8.h  overdriveN.h  powerxpress.h  radeonusbled.h  workstation.h
adl/include/amd_only/: amd_adapter.h  amd_adl.h  amd_channel.h  amd_defines.h  amd_desktop.h  amd_display.h  amd_displaysmanager.h  amd_graphics.h  amd_lnx.h  amd_mixedsls.h  amd_oem.h  amd_overdrive6.h  amd_pack.h  amd_powerxpress.h  amd_profile.h  amd_remotedisplay.h  amd_stereo3d.h  amd_structures.h  amd_workstation.h  amd_xeClient.h  amd_xeClient_comm.h
adl/include/customer/: oem_adapter.h  oem_display.h  oem_structures.h  sony_display.h
amd_package/: windows_adl.exp
amd_package/windows/: windows_adl.lib
(+2 files in other folders)
